learn change jdk tree